SonarLint changes: removed a few code smells